dnl
dnl configure.in for NeoPZ
dnl
dnl Process this file with GNU autoconf(1) to produce a configure script.
dnl
dnl $Id: configure.in,v 1.42 2005-11-29 10:59:50 tiago Exp $
dnl

dnl ----------------------------------------------------------------------------
dnl                              INITIAL CHECKINGS
dnl ----------------------------------------------------------------------------

dnl Checking if we are in the CFD kernel source tree
AC_INIT(PZ.mk.in)

dnl Requires a recent version of autoconf
AC_PREREQ(2.13)

dnl Sets the default prefix instalation (/usr/local/pz)
AC_PREFIX_DEFAULT(/l/phil/NeoPZ)

dnl PZ version stuff
PZ_VERSION=2
PZ_REV=0

AC_SUBST(PZ_VERSION)
AC_SUBST(PZ_REV)

dnl Greetings!
PZ_GREETINGS

dnl System variables
AC_CANONICAL_SYSTEM


dnl Initializes automake (must provide aclocal.m4!)
AM_INIT_AUTOMAKE(pz, $PZ_VERSION.$PZ_REV)
AM_SANITY_CHECK

dnl Tests the existance of a c++ compiler (m4 macro)
AC_PROG_CXX

dnl Elects c++ as the default testing language
AC_LANG_CPLUSPLUS

dnl Checks for other common programs (gcc, ar, ranlib and install)
AC_PROG_CC
PZ_PROG_AR
AC_PROG_RANLIB
AC_PROG_INSTALL

AC_TYPE_GETGROUPS
dnl AC_TYPE_MBSTATE_T
AC_TYPE_MODE_T
AC_TYPE_OFF_T
AC_TYPE_PID_T
AC_TYPE_SIGNAL
AC_TYPE_SIZE_T
AC_TYPE_UID_T
dnl AC_CHECK_SIZEOF(int *)

dnl ----------------------------------------------------------------------------
dnl                          ARCHITECTURE SPECIFICS     
dnl ----------------------------------------------------------------------------

dnl Determining standard include location and system architecture
case "$target" in
  i*86-*-linux-*)
    ARCH_INCLUDES=
    ;;
  i*86-*-cygwin*)
    ARCH_INCLUDES=
    ;;
  x86_64*)
    ARCH_INCLUDES=
    ;;
  *-apple-*)
    ARCH_INCLUDES=
    ;;
 *)
    AC_MSG_ERROR(cannot determine system architecture.)
    ;;
esac

AC_SUBST(ARCH_INCLUDES)

dnl ----------------------------------------------------------------------------
dnl                              COMPILATION MODE
dnl ----------------------------------------------------------------------------

dnl Sets the compilation mode (devel, profiling, opt)
AC_ARG_WITH(compilation-mode,
  [  --with-compilation-mode=MODE
                          'devel' for development (debug)
                          'profiling' for use with gprof
                          'opt' for maximum optimization],
  [comp_mode=$withval],
  [comp_mode=${comp_mode='devel'}])

case "${comp_mode}" in
  devel)
    echo "Development mode chosen. Debug symbols will be added."
    COMPILATION_MODE="Development compilation mode."
    case "$CXX" in
      c++ | g++ | /usr/local/gcc-3.3.5/installdir/bin/gcc | /usr/local/gcc-3.3.5/installdir/bin/g++)
        MODE_OPTIONS="-DDEBUG -Wall -ggdb3 -pipe -fno-default-inline -fno-inline"
        ;;
      *)
dnl         MODE_OPTIONS="-DDEBUG -Wall -ggdb3 -pipe -fno-default-inline -fno-inline"
       AC_MSG_ERROR(unsupported compiler.)
        ;;
    esac
    ;;
  profiling)
    echo "Profiling mode chosen. Information for gprof will be added."
    COMPILATION_MODE="Profiling compilation mode."
    case "$CXX" in
      c++ | g++)
        MODE_OPTIONS="-DNODEBUG -DNOTDEBUG -Wall -O2 -fdefault-inline -pg -pipe"
        ;;
      *)
        AC_MSG_ERROR(unsupported compiler.)
        ;;
    esac
    ;;
  opt)
    echo "Optimization mode chosen. Warp 9 Mr. Sulu!"
    COMPILATION_MODE="Optimization compilation mode."
    case "$CXX" in
      c++ | g++)
        dnl Assumed by -O2, but here anyway :)
        dnl   -fthread-jumps -fomit-frame-pointer -fstrength-reduce
        dnl   -fcse-follow-jumps -fcse-skip-blocks -frerun-cse-after-loop
        dnl   -frerun-loop-opt -fgcse -fexpensive-optimizations
        dnl   -fmove-all-movables

	dnl Use -march=`uname -m` with caution!

	dnl For the future:
	dnl -fno-math-errno -funsafe-math-optimizations -fno-trapping-math \
	dnl -mfpmath=sse

        MODE_OPTIONS="-DNOTDEBUG -DNODEBUG -w -s -O2 -fthread-jumps -fomit-frame-pointer -fstrength-reduce -fcse-follow-jumps -fcse-skip-blocks -fexpensive-optimizations -fmove-all-movables -finline-limit=1000 -fdefault-inline -ftemplate-depth-60 -pipe"
        ;;
      *)
        AC_MSG_ERROR(unsupported compiler.)
      ;;
    esac
    ;;
  *)
    AC_MSG_ERROR(bad value ${comp_mode} for --with-compilation-mode)
    ;;
esac

AC_SUBST(COMPILATION_MODE)
AC_SUBST(MODE_OPTIONS)

PZ_CXXFLAGS=$MODE_OPTIONS
PZ_MK="PZ.mk"

AC_SUBST(PZ_CXXFLAGS)
AC_SUBST(PZ_MK)

dnl ----------------------------------------------------------------------------
dnl                              ENABLE MeTiS?
dnl ----------------------------------------------------------------------------

AC_ARG_ENABLE(metis,
  [  --enable-metis=no Enables the use of MeTiS [default=no]],
  [metis_enabled=$enableval],
  [metis_enabled="no"])

case "${metis_enabled}" in
  yes)
    echo "Enabling MeTiS code."
    USING_METIS="-DUSING_METIS"
  ;;
  no)
    echo "MeTiS not chosen."
    USING_METIS=""
  ;;
  *)
    AC_MSG_ERROR(bad value ${metis_enabled} for --enable-metis)
  ;;
esac

AM_CONDITIONAL( METIS, test x${metis_enabled} = xyes )

AC_SUBST(USING_METIS)

dnl ----------------------------------------------------------------------------
dnl                               MeTiS LOCATION
dnl ----------------------------------------------------------------------------

dnl MeTiS location
AC_ARG_WITH(metis-dir,
  [  --with-metis-dir=DIR    Root of MeTiS instalation [/usr/local/metis]],
  [metis_dir=$withval],
  [metis_dir=${metis_dir="/usr/local/metis"}])

case "${metis_enabled}" in
  yes)
    METISDIR=$metis_dir
    METISINCLUDE="-I$METISDIR/include"
    METISLIBDIR="-L$METISDIR/lib"
    METISLIB="-lmetis"
  ;;
  no)
    METISDIR=""
    METISINCLUDE=""
    METISLIBDIR=""
    METISLIB=""
  ;;
  *)
    AC_MSG_ERROR(bad value ${metis_enabled} for --enable-metis)
  ;;
esac

AC_SUBST(METISDIR)
AC_SUBST(METISINCLUDE)
AC_SUBST(METISLIBDIR)
AC_SUBST(METISLIB)

dnl ----------------------------------------------------------------------------
dnl                              ENABLE MeTiS?
dnl ----------------------------------------------------------------------------

AC_ARG_ENABLE(log4cxx,
  [  --enable-log4cxx=no Enables the use of Log4cxx [default=no]],
  [log4cxx_enabled=$enableval],
  [log4cxx_enabled="no"])

case "${log4cxx_enabled}" in
  yes)
    echo "Enabling Log4cxx code."
    USING_LOG4CXX="-DLOG4CXX"
  ;;
  no)
    echo "Log4cxx not chosen."
    USING_LOG4CXX=""
  ;;
  *)
    AC_MSG_ERROR(bad value ${log4cxx_enabled} for --enable-log4cxx)
  ;;
esac

AM_CONDITIONAL( LOG4CXX, test x${log4cxx_enabled} = xyes )

AC_SUBST(USING_LOG4CXX)

dnl ----------------------------------------------------------------------------
dnl                               LOG4CXX LOCATION
dnl ----------------------------------------------------------------------------

dnl Log4Cxx location
AC_ARG_WITH(log4cxx-dir,
  [  --with-log4cxx-dir=DIR    Root of Log4cxx instalation [/usr/local]],
  [log4cxx_dir=$withval],
  [log4cxx_dir=${log4cxx_dir="/usr/local"}])

case "${log4cxx_enabled}" in
  yes)
	LOG4CXXDIR=$log4cxx_dir
	LOG4CXXINCLUDE="-I$LOG4CXXDIR/include"
	LOG4CXXLIBDIR="-L$LOG4CXXDIR/lib"
	LOG4CXXLIB="-llog4cxx"
  ;;
  no)
	LOG4CXXDIR=""
	LOG4CXXINCLUDE=""
	LOG4CXXLIBDIR=""
	LOG4CXXLIB=""
  ;;
  *)
    AC_MSG_ERROR(bad value ${log4cxx_enabled} for --enable-log4cxx)
  ;;
esac

AC_SUBST(LOG4CXXDIR)
AC_SUBST(LOG4CXXINCLUDE)
AC_SUBST(LOG4CXXLIBDIR)
AC_SUBST(LOG4CXXLIB)

dnl ----------------------------------------------------------------------------
dnl                              ENABLE FAD?
dnl ----------------------------------------------------------------------------

AC_ARG_ENABLE(fad,
  [  --enable-fad=no         Enables FAD Automatic differentiation [default=no]],
  [fad_enabled=$enableval],
  [fad_enabled="no"])

case "${fad_enabled}" in
  yes)
    echo "Enabling FAD."
    USING_FAD="-D_AUTODIFF"
  ;;
  no)
    echo "FAD not chosen."
    USING_FAD=""
  ;;
  *)
    AC_MSG_ERROR(bad value ${fad_enabled} for --enable-fad)
  ;;
esac

AM_CONDITIONAL( FAD, test x${fad_enabled} = xyes )

AC_SUBST(USING_FAD)

dnl ----------------------------------------------------------------------------
dnl                               FAD LOCATION
dnl ----------------------------------------------------------------------------

dnl FAD location
AC_ARG_WITH(fad-dir,
  [  --with-fad-dir=DIR      Root of FAD instalation [/usr/local/fad]],
  [fad_dir=$withval],
  [fad_dir=${fad_dir="/usr/local/fad"}])

case "${fad_enabled}" in
  yes)
    FADDIR=$fad_dir
    FADINCLUDE="-I$FADDIR"
    FADINCLUDE_FAD="-I$FADDIR/Fad"
    FADINCLUDE_TFAD="-I$FADDIR/TinyFad"
    FADINCLUDE_TFADET="-I$FADDIR/TinyFadET"
  ;;
  no)
    FADDIR=""
    FADINCLUDE=""
    FADINCLUDE_FAD=""
    FADINCLUDE_TFAD=""
    FADINCLUDE_TFADET=""
  ;;
  *)
    AC_MSG_ERROR(bad value ${fad_dir} for --with-fad-dir)
  ;;
esac

AC_SUBST(FADDIR)
AC_SUBST(FADINCLUDE)
AC_SUBST(FADINCLUDE_FAD)
AC_SUBST(FADINCLUDE_TFAD)
AC_SUBST(FADINCLUDE_TFADET)


dnl ----------------------------------------------------------------------------
dnl                              ENABLE atlas?
dnl ----------------------------------------------------------------------------

AC_ARG_ENABLE(atlas,
  [  --enable-atlas=no       Enables the use of atlas [default=no]],
  [atlas_enabled=$enableval],
  [atlas_enabled="no"])

case "${atlas_enabled}" in
  yes)
    echo "Enabling atlas code."
    USING_ATLAS="-DUSING_ATLAS"
  ;;
  no)
    echo "atlas not chosen."
    USING_ATLAS=""
  ;;
  *)
    AC_MSG_ERROR(bad value ${atlas_enabled} for --enable-atlas)
  ;;
esac

AM_CONDITIONAL( atlas, test x${atlas_enabled} = xyes )

AC_SUBST(USING_ATLAS)

dnl ----------------------------------------------------------------------------
dnl                               atlas LOCATION
dnl ----------------------------------------------------------------------------

dnl atlas location
AC_ARG_WITH(atlas-dir,
  [  --with-atlas-dir=DIR    Root of atlas instalation [/usr/local/atlas]] -> Normally something like /usr/local/ATLAS/lib/<SomeLinuxArchitecture>,
  [atlas_dir=$withval],
  [atlas_dir=${atlas_dir="/usr/local/atlas"}])

case "${atlas_enabled}" in
  yes)
    ATLASDIR=$atlas_dir
    ATLASINCLUDE="-I$ATLASDIR/../../include"
    ATLASLIBDIR="-L$ATLASDIR"
    ATLASLIB="-lcblas -llapack -latlas"
    LIBATLAS="$ATLASDIR/libcblas.a $ATLASDIR/liblapack.a $ATLASDIR/libatlas.a"
  ;;
  no)
    ATLASDIR=""
    ATLASINCLUDE=""
    ATLASLIBDIR=""
    ATLASLIB=""
    LIBATLAS=""
  ;;
  *)
    AC_MSG_ERROR(bad value ${atlas_enabled} for --enable-atlas)
  ;;
esac

AC_SUBST(ATLASDIR)
AC_SUBST(ATLASINCLUDE)
AC_SUBST(ATLASLIBDIR)
AC_SUBST(ATLASLIB)
AC_SUBST(LIBATLAS)

dnl ----------------------------------------------------------------------------
dnl                                  CLEANING
dnl ----------------------------------------------------------------------------

PZ_DISTCLEANFILES="*~ *.h.ps *.cc.ps *.gcov *.bb *.bbg *.da gmon.out core octave-core wrong *.info *.prof"

PZ_CLEANFILES="*~ core octave-core *.o *.info"

AC_SUBST(PZ_DISTCLEANFILES)
AC_SUBST(PZ_CLEANFILES)

dnl ----------------------------------------------------------------------------
dnl                              CONGRATULATIONS!
dnl ----------------------------------------------------------------------------

AC_OUTPUT([ Makefile PZ.mk PZ_user.mk Projects/AltoDes/Makefile Util/Makefile Matrix/Makefile Cosys/Makefile Multigrid/Makefile Material/Makefile Post/Makefile Shape/Makefile Integral/Makefile Geom/Makefile Mesh/Makefile Refine/Makefile External/Makefile External/sloan/Makefile Analysis/Makefile Frontal/Makefile StrMatrix/Makefile Pre/Makefile Common/Makefile LinearSolvers/Makefile Save/Makefile lib/Makefile Projects/Makefile Projects/adaptivity/Makefile Projects/Test_RefPattern/Makefile Projects/Adapt_MultThread/Makefile Projects/Igor/Makefile Projects/TestePercolacao/Makefile Projects/BoundaryLayer/Makefile Projects/termica/Makefile Projects/NonLinBiharmonic/Makefile Projects/Heman/Makefile Projects/testgeom/Makefile Projects/checkconv/Makefile Projects/HyperElasticityFAD/Makefile Projects/ConsLaw/Makefile Projects/Descontinuo2/Makefile Projects/testshape/Makefile Projects/testmat/Makefile Projects/viga3d/Makefile  ])

PZ_BYEBYE

dnl --| NeoPZ |-----------------------------------------------------------------
