#
# NeoPZ Common makefile
#
# It will be processed by GNU automake to produce Makefile.in
#
# $Id#
#

DISTCLEANFILES = @PZ_DISTCLEANFILES@
CLEANFILES     = @PZ_CLEANFILES@

-include $(top_srcdir)/@PZ_MK@

commondir = $(prefix)/Common

common_HEADERS = $(wildcard *.h)

## --| NeoPZ |------------------------------------------------------------------
